2008-01-07 Takuro Ashie <ashie@homa.ne.jp>

	* src/fileload.c: Fix a bug that the cancel button on the file selection
	dialog is removed when an user press it.

2008-01-07 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_image_win.c, src/gimv_thumb_win.c: Use GTK's stock items
	for toolbar buttons.

2008-12-02 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_prefs_win.c: Fix a crash bug.

2007-10-28 Takuro Ashie <ashie@homa.ne.jp>

	* configure.ac: Use AC_CONFIG_FILES.

2007-10-23 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_file_prop_win.[ch]: Rename from gtk_prop.[ch]
	* src/Makefile.am, src/gimv_dir_view.c, src/gimv_thumb_view.c:
	Follow the change.

2007-10-23 Takuro Ashie <ashie@homa.ne.jp>

	* src/gtk_prop.[ch]: Rename a functions.
	* src/gimv_dir_view.c, src/gimv_thumb_view.c: Follow the change.

2007-10-23 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/image_view/gimv_mplayer.c,
	  plugins/image_view/gimv_xine_priv.h:
	Remove needless codes.

2007-10-23 Takuro Ashie <ashie@homa.ne.jp>

	* intltool-*.in, po/Makefile.in.in: Removed from svn.
	* autogen.sh: Add intltoolize.

2007-10-23 Takuro Ashie <ashie@homa.ne.jp>

	* src/prefs_ui/prefs_ui_movie.c: Fix compile error.
	* src/utils_md5.[ch]: Renamed from md5.[ch]
	* src/Makefile.am, src/compare_md5.c: Follow the change.
	* intltool-*.in: Updated to 0.36.

2007-10-22 Takuro Ashie <ashie@homa.ne.jp>

	* src/utils_auto_comp.[ch]: Renamed from auto_completion.[ch]
	* src/utils_char_code.[ch]: Renamed from charset.[ch]
	* src/utils_file.[ch]: Renamed from fileutil.[ch]
	* src/utils_file_gtk.[ch]: Renamed from gfileutils.[ch]
	* src/utils_gtk.[ch]: Renamed from gtkutils.[ch]
	* src/utils_japanese.[ch]: Renamed from japanese.[ch]
	* src/utils_menu.[ch]: Renamed from menu.[ch]
	* src/Makefile.am, *.[ch]: Follow the change.

2007-10-22 Takuro Ashie <ashie@homa.ne.jp>

	* src/uitls_auto_comp.[ch]: Renamed from src/auto_completion.[ch]
	* src/dnd.[ch]: Renamed from src/utils_dnd.[ch]