@@ -1,7 +1,9 @@
 2008-01-07 Takuro Ashie <ashie@homa.ne.jp>
 
-	* src/fileload.c: Fix a bug that the cancel button on the file selection
-	dialog is removed when an user press it.
+	* src/fileload.c:
+	  - Fix a bug that the cancel button on the file selection dialog is
+	    removed when an user press it.
+	  - Remove needless code.
 
 2008-01-07 Takuro Ashie <ashie@homa.ne.jp>
 
